postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-postgres
  template:
    metadata:
      labels:
        app: my-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:14.6
          resources:
            limits:
              cpu: "1000m"
              memory: "1Gi"
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: my-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
